# MergeTwoDatasets

./: Main.py  TestMergeDataSets.py  TestPlotDataSets.py  merge.py  pyproject.toml
Utilities/: MergeDataSets.py  PlotDataSets.py
datasets/: customer_details.csv  defect_details.csv  updated_defect_details.csv
